# Search_Engine

./: .gitignore  CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchServer.cpp  SearchServer.h  answers.json  config.json  main.cpp  requests.json
file/: text01.txt  text02.txt  text03.txt  text04.txt  text05.txt
test/: CMakeLists.txt  InvertedIndex_test.cpp
